Prevent logo from jumping when the left margin kicks in.

--- a/default.css
+++ b/default.css
@@ -20,6 +20,7 @@
 body
 {
   font: 16px/1.25 'X-Walsheim', 'Gill Sans', 'Gill Sans MT', Calibri, sans-serif;
+  text-rendering: optimizeLegibility;
 }
 h1, h2, h3, h4
 {
@@ -64,7 +65,7 @@ div.column
   div.column
   {
     max-width: 64em;
-    padding-left: 12em;
+    padding-left: 9.8em;
   }
 }
 
@@ -97,6 +98,7 @@ hgroup h2
 hgroup h1
 {
   float: left;
+  width: 3.65em;
   margin: 0 0.25em 0 0;
   text-align: right;
 /*  outline: 1px solid red;*/
@@ -106,8 +108,7 @@ hgroup h1
   {
     position: absolute;
     top: 0;
-    left: -6.25em;
-    width: 6em;
+    left: -3.9em;
     text-align: right;
   }
 }
